# ferrite

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  benchmark.py  inspect_message.py  pyproject.toml  requirements.txt  test.ipynb  test_eip712.py  test_ferrite.py
.github/workflows/: build_wheels.yml
ferrite/: __init__.py  _ferrite.pyi  account.py  lib.rs
src/: lib.rs
