[package]
name = "ferrite_signer"
version = "0.2.5"
edition = "2021"

[lib]
name = "_ferrite"
crate-type = ["cdylib"]
path = "ferrite/lib.rs"

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3"] }

# Ethers for battle-tested Ethereum primitives
ethers-core = "2.0.10"
ethers-signers = "2.0.10"

# Hex for string-to-bytes conversion
hex = "0.4.3"

# Tokio for running async functions
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
