[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "ferrite"
version = "0.1.11"
description = "High-performance Rust-based signer for web3.py."
authors = [{name = "Joseph Kinder", email = "joseph.kinder70@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "web3>=7.0.0",
    "eth-account>=0.8.0"
]

[project.urls]
Homepage = "https://github.com/satoshiburger/ferrite"
Repository = "https://github.com/satoshiburger/ferrite"
Documentation = "https://github.com/satoshiburger/ferrite/blob/main/README.md"
Issues = "https://github.com/satoshiburger/ferrite/issues"

[tool.bumpversion]
current_version = "0.1.11"

commit = true

tag = true

commit_message = "build: Bump version to {new_version}"
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
