[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "ferrite"
version = "0.2.2"
description = "High-performance Rust patch for Python eth-account"
authors = [{name = "Joseph Kinder", email = "joseph.kinder70@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "eth-account>=0.8.0"
]

[project.urls]
Homepage = "https://github.com/satoshiburger/ferrite"
Repository = "https://github.com/satoshiburger/ferrite"
Documentation = "https://github.com/satoshiburger/ferrite/blob/main/README.md"
Issues = "https://github.com/satoshiburger/ferrite/issues"

[tool.bumpversion]
current_version = "0.2.2"

commit = true
commit_args = "--no-verify"
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
